# hypr-download-sorter

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Pictures  README.md
.github/workflows/: ci.yml
config/: default.toml
scripts/: install.sh  uninstall.sh
src/: classifier.rs  config.rs  error.rs  filter.rs  lib.rs  main.rs  models.rs  mover.rs  notifier.rs  paths.rs  pipeline.rs  rules.rs  startup.rs
src/watcher/: convert.rs  debounce.rs  engine.rs  event.rs  mod.rs  service.rs  stability.rs
systemd/: hypr-download-sorter.service
