[package]
name = "hypr-download-sorter"
version = "0.1.0"
edition = "2024"
authors = ["tuananh"]
description = "Automatic download organizer for Hyprland and Quickshell."
license = "MIT"
repository = ""
readme = "README.md"
keywords = ["hyprland", "linux", "downloads", "automation"]
categories = ["filesystem"]

[dependencies]
camino = { version = "1.2.4", features = ["serde1"] }
directories = "6.0"

notify = "8.2"

serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

thiserror = "2"

libc = "0.2"

tokio = { version = "1.53", features = [
    "rt",
    "macros",
    "time",
    "fs",
    "rt-multi-thread",
] }

infer = "0.19"

zbus = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt"
] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true